--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apocalypse-frontend-server",
+  "name": "apo-frontend-server",
   "version": "0.1.0",
   "private": true,
   "scripts": {
