--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@formatjs/intl-pluralrules": "^3.5.6",
     "@formatjs/intl-relativetimeformat": "^7.3.6",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "@react-navigation/native": "^6.1.9",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "connected-react-router": "^6.9.1",
@@ -22,6 +23,8 @@
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
     "react-intl": "^5.20.2",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
